--- a/web/opac/locale/ar-AR/fm_IDL.dtd
+++ b/web/opac/locale/ar-AR/fm_IDL.dtd
@@ -349,6 +349,7 @@
 <!ENTITY field.atval.module.label "Module Name">
 <!ENTITY field.atreact.module.label "Module Name">
 <!ENTITY field.atclean.module.label "Module Name">
+<!ENTITY field.acqpo.amount_estimated.label "Amount Estimated">
 <!ENTITY class.ccnbin.label "Call Number Bucket Item Note">
 <!ENTITY field.vqbr.create_time.label "Create Time">
 <!ENTITY field.vqar.create_time.label "Create Time">
