--- a/web/opac/locale/cs-CZ/fm_IDL.dtd
+++ b/web/opac/locale/cs-CZ/fm_IDL.dtd
@@ -349,6 +349,7 @@
 <!ENTITY field.atval.module.label "Jméno modulu">
 <!ENTITY field.atreact.module.label "Jméno modulu">
 <!ENTITY field.atclean.module.label "Jméno modulu">
+<!ENTITY field.acqpo.amount_estimated.label "Amount Estimated">
 <!ENTITY class.ccnbin.label "Poznámka k položce skupiny signatur">
 <!ENTITY field.vqbr.create_time.label "Čas vytvoření">
 <!ENTITY field.vqar.create_time.label "Čas vytvoření">
