--- a/templates/locale/actor.cs-CZ.po
+++ b/templates/locale/actor.cs-CZ.po
@@ -1,193 +1,195 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Czech translation for evergreen
+# Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
+# This file is distributed under the same license as the evergreen package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: evergreen\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2016-09-08 09:57+0000\n"
+"Last-Translator: Eva Cerninakova <Unknown>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.9.0\n"
+"X-Generator: Launchpad (build 18184)\n"
+"X-Launchpad-Export-Date: 2016-09-09 05:56+0000\n"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:63
 msgid "Active"
-msgstr ""
+msgstr "Aktivní"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:50
 msgid "Address Alert"
-msgstr ""
+msgstr "Varování pro adresy"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:78
 msgid "Apply Changes"
-msgstr ""
+msgstr "Potvrdit změny"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:101
 msgid "Assign additional permission groups to users here.<br/>This does not affect circulation policy."
 msgstr ""
+"Přiřadit dodatečné skupiny oprávnění pro tyto uživatele.<br/>Toto nastavení "
+"neovlivní pravidla pro výpůjčky."
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:62
 msgid "Barcode"
-msgstr ""
+msgstr "Čárový kód"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:242
 msgid "Cancel Selected Events"
-msgstr ""
+msgstr "Zrušit vybrané události"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:112
 msgid "Circulation"
-msgstr ""
+msgstr "Výpůjčka"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:77
 msgid "Close"
-msgstr ""
+msgstr "Zavřít"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:128
 msgid "Collected"
-msgstr ""
+msgstr "sebráno"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:132
 msgid "Complete"
-msgstr ""
+msgstr "Dokončeno"
 
 #: ../../Open-ILS/src/templates/actor/user/message.tt2:97
 msgid "Context Org Unit"
-msgstr ""
+msgstr "Související organizační jednotka"
 
 #: ../../Open-ILS/src/templates/actor/user/message.tt2:93
 msgid "Delete Selected"
-msgstr ""
+msgstr "Smazat vybrané"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:133
 msgid "Error"
-msgstr ""
+msgstr "Chyba"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:280
 msgid "Event Name"
-msgstr ""
+msgstr "Název události"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:127
 msgid "Found"
-msgstr ""
+msgstr "Nalezeno"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:113
 msgid "Hold"
-msgstr ""
+msgstr "Rezervace"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:129
 msgid "Invalid"
-msgstr ""
+msgstr "Neplatné"
 
 #: ../../Open-ILS/src/templates/actor/user/message.tt2:2 ../../Open-ILS/src/templates/actor/user/message.tt2:91
 msgid "Patron Messages"
-msgstr ""
+msgstr "Zprávy čtenáře"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:130
 msgid "Pending"
-msgstr ""
+msgstr "Čeká na zpracování"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:64
 msgid "Primary"
-msgstr ""
+msgstr "Primární"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:246
 msgid "Print All Events"
-msgstr ""
+msgstr "Vytisknout všechny události"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:244
 msgid "Print Selected Events"
-msgstr ""
+msgstr "Vytisknout  vybrané události"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:131
 msgid "Reacting"
-msgstr ""
+msgstr "Reagování"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:240
 msgid "Reset Selected Events"
-msgstr ""
+msgstr "Vynulovat vybrané události"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:114
 msgid "Save"
-msgstr ""
+msgstr "Uložit"
 
 #: ../../Open-ILS/src/templates/actor/user/register_table.tt2:47
 msgid "Secondary Groups"
-msgstr ""
+msgstr "Sekundární skupiny"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:94
 msgid "Secondary Permission Groups"
-msgstr ""
+msgstr "Secondary Permission Groups"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:23
 msgid "Show All Fields"
-msgstr ""
+msgstr "Zobrazit všechna pole"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:21
 msgid "Show Only Required Fields"
-msgstr ""
+msgstr "Zobrazit pouze povinná pole"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:22
 msgid "Show Suggested Fields"
-msgstr ""
+msgstr "Zobrazit navrhovaná pole"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:250
 msgid "Show events at and below"
-msgstr ""
+msgstr "Zobrazit události na a  níže"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:291
 msgid "Target Circulation - Author"
-msgstr ""
+msgstr "Cílová výpůjčka - autor"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:289
 msgid "Target Circulation - Copy Barcode"
-msgstr ""
+msgstr "Cílová výpůjčka - čárový kód exempláře"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:292
 msgid "Target Circulation - Patron Barcode"
-msgstr ""
+msgstr "Cílová výpůjčka - čárový kód čtenáře"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:290
 msgid "Target Circulation - Title"
-msgstr ""
+msgstr "Cílová výpůjčka - název"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:294
 msgid "Target Hold - Author"
-msgstr ""
+msgstr "Cílová rezervace - autor"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:295
 msgid "Target Hold - Patron Barcode"
-msgstr ""
+msgstr "Cílová rezervace - čárový kód čtenáře"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:293
 msgid "Target Hold - Title"
-msgstr ""
+msgstr "Cílová rezervace - název"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:2
 msgid "Triggered Event Log"
-msgstr ""
+msgstr "Log spuštěných událostí"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:163
 msgid "Up to how many rows?"
-msgstr ""
+msgstr "Až do kolika řádků?"
 
 #: ../../Open-ILS/src/templates/actor/user/register.tt2:1
 msgid "User Editor"
-msgstr ""
+msgstr "Údaje o čtenáři"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:171
 msgid "You selected nothing."
-msgstr ""
+msgstr "Nic jste nevybrali."
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:235
 msgid "copy specific"
-msgstr ""
+msgstr "specifické pro exemplář"
 
 #: ../../Open-ILS/src/templates/actor/user/event_log.tt2:236
 msgid "patron specific"
-msgstr ""
+msgstr "specifické pro čtenáře"
