--- a/templates/locale/booking.cs-CZ.po
+++ b/templates/locale/booking.cs-CZ.po
@@ -1,53 +1,53 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Czech translation for evergreen
+# Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
+# This file is distributed under the same license as the evergreen package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: evergreen\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2016-09-06 09:06+0000\n"
+"Last-Translator: Eva Cerninakova <Unknown>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.9.0\n"
+"X-Generator: Launchpad (build 18179)\n"
+"X-Launchpad-Export-Date: 2016-09-07 06:40+0000\n"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:25 ../../Open-ILS/src/templates/booking/pickup.tt2:50 ../../Open-ILS/src/templates/booking/return.tt2:32 ../../Open-ILS/src/templates/booking/return.tt2:57
 msgid "Barcode"
-msgstr ""
+msgstr "Čárový kód"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:52 ../../Open-ILS/src/templates/booking/return.tt2:34 ../../Open-ILS/src/templates/booking/return.tt2:58
 msgid "Due time"
-msgstr ""
+msgstr "Čas vrácení"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:27 ../../Open-ILS/src/templates/booking/reservation.tt2:101
 msgid "End time"
-msgstr ""
+msgstr "Čas ukončení"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:51 ../../Open-ILS/src/templates/booking/return.tt2:33
 msgid "Pickup time"
-msgstr ""
+msgstr "Čas vyzvednutí"
 
 #: ../../Open-ILS/src/templates/booking/reservation.tt2:99
 msgid "Resource"
-msgstr ""
+msgstr "Zdroj"
 
 #: ../../Open-ILS/src/templates/booking/return.tt2:59
 msgid "Return time"
-msgstr ""
+msgstr "Čas skutečného vrácení"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:26 ../../Open-ILS/src/templates/booking/reservation.tt2:100
 msgid "Start time"
-msgstr ""
+msgstr "Čas začátku"
 
 #: ../../Open-ILS/src/templates/booking/pickup.tt2:24 ../../Open-ILS/src/templates/booking/pickup.tt2:49 ../../Open-ILS/src/templates/booking/return.tt2:31 ../../Open-ILS/src/templates/booking/return.tt2:56
 msgid "Title"
-msgstr ""
+msgstr "Název"
 
 #: ../../Open-ILS/src/templates/booking/reservation.tt2:98
 msgid "Type"
-msgstr ""
+msgstr "Typ"
