--- a/templates/locale/cat.cs-CZ.po
+++ b/templates/locale/cat.cs-CZ.po
@@ -1,57 +1,57 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Czech translation for evergreen
+# Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
+# This file is distributed under the same license as the evergreen package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: evergreen\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2016-09-06 08:28+0000\n"
+"Last-Translator: Eva Cerninakova <Unknown>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.9.0\n"
+"X-Generator: Launchpad (build 18179)\n"
+"X-Launchpad-Export-Date: 2016-09-07 06:40+0000\n"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:1
 msgid "Authority record list"
-msgstr ""
+msgstr "Seznam autoritních záznamů"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:22
 msgid "Authority type: "
-msgstr ""
+msgstr "Typ autority: "
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:76
 msgid "Clear"
-msgstr ""
+msgstr "Vymazat"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:38
 msgid "Library: "
-msgstr ""
+msgstr "Knihovna: "
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:71
 msgid "Merge"
-msgstr ""
+msgstr "Sloučit"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:50
 msgid "Next"
-msgstr ""
+msgstr "Další"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:47
 msgid "Page: "
-msgstr ""
+msgstr "Strana: "
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:41
 msgid "Previous"
-msgstr ""
+msgstr "Předchozí"
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:18
 msgid "Search term: "
-msgstr ""
+msgstr "Vyhledávací termín: "
 
 #: ../../Open-ILS/src/templates/cat/authority/list.tt2:58
 msgid "Submit"
-msgstr ""
+msgstr "Potvrdit"
