--- a/web/opac/locale/en-US/lang.dtd
+++ b/web/opac/locale/en-US/lang.dtd
@@ -3753,7 +3753,6 @@
 <!ENTITY staff.circ.alternate_copy_summary.Edition.label "Edition">
 <!ENTITY staff.circ.alternate_copy_summary.Floating.label "Floating">
 <!ENTITY staff.circ.alternate_copy_summary.Holdable.label "Holdable">
-<!ENTITY staff.circ.alternate_copy_summary.Age_Protect.label "Age-based Hold Protection">
 <!ENTITY staff.circ.alternate_copy_summary.Hold_Shelf_Location.label "Hold Shelf Location">
 <!ENTITY staff.circ.alternate_copy_summary.Holds_Transit.label "Holds/Transit">
 <!ENTITY staff.circ.alternate_copy_summary.Holds_Transit.accesskey "">
@@ -3766,7 +3765,6 @@
 <!ENTITY staff.circ.alternate_copy_summary.Circ_Library.label "Circ Library">
 <!ENTITY staff.circ.alternate_copy_summary.Patron_Name.label "Patron">
 <!ENTITY staff.circ.alternate_copy_summary.Price.label "Price">
-<!ENTITY staff.circ.alternate_copy_summary.Cost.label "Acquisition Cost">
 <!ENTITY staff.circ.alternate_copy_summary.Previous_Circ_Group.label "Previous Circ Group">
 <!ENTITY staff.circ.alternate_copy_summary.Pub_Date.label "Pub Date">
 <!ENTITY staff.circ.alternate_copy_summary.Publisher.label "Publisher">
@@ -3851,11 +3849,17 @@
 <!ENTITY staff.client.portal.recordbuckets.description "Record Buckets">
 <!ENTITY staff.client.portal.recordbuckets.tab_name "Record Buckets">
 <!ENTITY staff.client.portal.admin "Administration">
-<!ENTITY staff.client.portal.helpdesk "Get Help with Evergreen">
+<!ENTITY staff.client.portal.helpdesk "Sage Help Desk">
 <!ENTITY staff.client.portal.helpdesk.description "Submit A Helpdesk Ticket">
+<!ENTITY staff.client.portal.quickreports "Sage Quick Reports">
+<!ENTITY staff.client.portal.quickreports.description "Launch Quick Reports">
 <!ENTITY staff.client.portal.reports "Reports">
 <!ENTITY staff.client.portal.reports.description "Reports">
 <!ENTITY staff.client.portal.reports.tab_name "Reports">
+<!ENTITY staff.client.portal.automatedreports "Sage Auto Reports">
+<!ENTITY staff.client.portal.automatedreports.description "Launch Auto Reports">
+<!ENTITY staff.client.portal.printnotices "Sage Print Notices">
+<!ENTITY staff.client.portal.printnotices.description "Launch Print Notices">
 <!ENTITY staff.client.portal.receipts "Edit Receipt Templates">
 <!ENTITY staff.client.portal.receipts.description "Edit Receipt Templates">
 <!ENTITY staff.client.portal.copyright "Copyright &copy; 2006-2012 Georgia Public Library Service, and others">
